instantiate course detail page, temporarily change wrap background-color to see white text on white background

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -27,6 +27,7 @@ a {
     max-width: 1250px;
     margin: 0 auto;
     padding: 0 1rem;
+    background-color: #555; /* remove later, white text on white backgournd, currently */
 }
 header {
     background: #57496e;
