update CourseDetail.jsx to look more like given markup file

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -27,7 +27,6 @@ a {
     max-width: 1250px;
     margin: 0 auto;
     padding: 0 1rem;
-    background-color: #555; /* remove later, white text on white backgournd, currently */
 }
 header {
     background: #57496e;
@@ -76,7 +75,7 @@ header nav a:hover {
     margin-bottom: .25rem;
 }
 .course--title {
-    color: #fff;
+    color: #000;
     font-weight: 700;
     font-size: 1.25rem;
 }
